Update SJH and JIJ